--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ path = "src/03/bin/main.rs"
 [[bin]]
 name = "04"
 path = "src/04/bin/main.rs"
+
+[[bin]]
+name = "05"
+path = "src/05/bin/main.rs"
