--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ path = "src/04/bin/main.rs"
 [[bin]]
 name = "05"
 path = "src/05/bin/main.rs"
+
+[[bin]]
+name = "06"
+path = "src/06/bin/main.rs"
