--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,7 @@ path = "src/05/bin/main.rs"
 [[bin]]
 name = "06"
 path = "src/06/bin/main.rs"
+
+[[bin]]
+name = "07"
+path = "src/07/bin/main.rs"
