--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,7 @@ path = "src/06/bin/main.rs"
 [[bin]]
 name = "07"
 path = "src/07/bin/main.rs"
+
+[[bin]]
+name = "08"
+path = "src/08/bin/main.rs"
