--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,7 @@ path = "src/07/bin/main.rs"
 [[bin]]
 name = "08"
 path = "src/08/bin/main.rs"
+
+[[bin]]
+name = "09"
+path = "src/09/bin/main.rs"
