--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,7 @@ path = "src/09/bin/main.rs"
 [[bin]]
 name = "10"
 path = "src/10/bin/main.rs"
+
+[[bin]]
+name = "11"
+path = "src/11/bin/main.rs"
