--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,7 @@ path = "src/10/bin/main.rs"
 [[bin]]
 name = "11"
 path = "src/11/bin/main.rs"
+
+[[bin]]
+name = "12"
+path = "src/12/bin/main.rs"
